--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "readmeUrl": "https://raw.githubusercontent.com/cveinnt/cveinnt/master/README.md",
+  "readmeUrl": "https://raw.githubusercontent.com/OcheOps/Oche/master/README.md",
   "title": "Portfolio",
   "name": "Oche Gideon",
   "ascii": "Oche",
@@ -10,7 +10,7 @@
   "email": "ochecodes@gmail.com",
   "ps1_hostname": "OcheVerse",
   "ps1_username": "visitor",
-  "repo": "https://github.com/Cveinnt/LiveTerm",
+  "repo": "https://github.com/OcheOps/LiveTerm",
   "resume_url": "https://drive.google.com/file/d/1jwtaUiBMfizodJzyKIV_l_k_nqpyBLTg/view?usp=sharing",
   "donate_urls": {
     "paypal": "https://paypal.me/cveinnt",
