Update email address in config.json

--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
     "github": "OcheOps",
     "linkedin": "gideonodavid"
   },
-  "email": "ochecodes@gmail.com",
+  "email": "ocheworks@gmail.com",
   "ps1_hostname": "ocheverse",
   "ps1_username": "you",
   "repo": "https://github.com/OcheOps/LiveTerm",
